<resources>
    <string name="language_0" translatable="false">English</string>
    <string name="language_1" translatable="false">Português</string>
    <string name="language_2" translatable="false">Tiếng Việt</string>
    <string name="language_3" translatable="false">русский</string>
    <string name="language_4" translatable="false">हिन्दी</string>
    <string name="language_5" translatable="false">日本語</string>
    <string name="language_6" translatable="false">한국어</string>
    <string name="language_7" translatable="false">Türk</string>
    <string name="language_8" translatable="false">Français</string>
    <string name="language_9" translatable="false">Español</string>
    <string name="language_10" translatable="false">عربى</string>
    <string name="language_us" translatable="false">English (US)</string>
    <string name="language_uk" translatable="false">English (UK)</string>
    <string name="language_au" translatable="false">English (Australia)</string>
    <string name="language_in" translatable="false">English (India)</string>
    <string name="language_ca" translatable="false">English (Canada)</string>
    <string name="language_sa" translatable="false">English (South Africa)</string>
    <string name="language_11" translatable="false">简体中文</string>
    <string name="language_12" translatable="false">繁體中文</string>
    <string name="language_13" translatable="false">فارسی</string>
    <string name="language_14" translatable="false">Nederlands</string>
    <string name="language_15" translatable="false">Українська</string>
    <string name="language_16" translatable="false">Italiano</string>
    <string name="language_17" translatable="false">Français (Canada)</string>
    <string name="language_18" translatable="false">Deutsch</string>
    <string name="language_19" translatable="false">Español (US)</string>
    <string name="language_20" translatable="false">Español (Latinoamérica)</string>
    <string name="language_21" translatable="false">Português (Brasil)</string>
    <string name="language_22" translatable="false">Bahasa Indonesia</string>
    <string name="language_23" translatable="false">עִבְרִית</string>
    <string name="app_name">Docx Reader</string>
    <string name="select">Selected</string>
    <string name="get_start_content">In order to provider you with better services and a clearer understanding of how we handle and protect your data, we have updated the Privacy Policy</string>
    <string name="agree_us">By Tapping \"AGREE\" button, you agree our \"Privacy Policy\"</string>
    <string name="agree">Agree</string>
    <string name="app_version">Version %s</string>
    <string name="file_not_found">File not found!!!</string>
    <string name="rate_now">Rate now</string>
    <string name="recent_add">Recently added</string>
    <string name="all">All</string>
    <string name="pdf">Pdf</string>
    <string name="word">Word</string>
    <string name="excel">Excel</string>
    <string name="ppt">Ppt</string>
    <string name="remind_later">Remind me later</string>
    <string name="please_rate">Please select a rating!!!</string>
    <string name="thank_for_rate">Thank you!!!</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_by_date">Date created: Ascending</string>
    <string name="sort_by_date_desc">Date created Descending</string>
    <string name="sort_by_name_asc">Name: A to Z</string>
    <string name="sort_by_name_desc">Name: Z to A</string>
    <string name="sort_by_size_asc">File size: Ascending</string>
    <string name="sort_by_size_desc">File size: Descending</string>
    <string name="replace_old_file">Replace old file ?</string>
    <string name="ok">Ok</string>
    <string name="convert_to_pdf">Convert to PDF</string>
    <string name="pdf_file_name">PDF File Name</string>
    <string name="password">Password</string>
    <string name="convert">Convert</string>
    <string name="file_name_invalid">File name not valid</string>
    <string name="convert_success">Converted to PDF successfully!</string>
    <string name="open">Open</string>
    <string name="add_in_fav">Add to favourite</string>
    <string name="browse_more_files">Browse More Files</string>
    <string name="cancel">Cancel</string>
    <string name="change_language">Change Language</string>
    <string name="change_language_description">You can change language from here.</string>
    <string name="clear_fav_message">Are you sure want to clear the list of favourite files, but they would not be permanently deleted?</string>
    <string name="clear_favourite">Clear Favourite</string>
    <string name="clear_recent">Clear Recent</string>
    <string name="clear_recent_message">Are you sure want to clear the list of recent files, but they would not be permanently deleted?</string>
    <string name="cont_pages">Continuous Pages</string>
    <string name="continuee">Continue</string>
    <string name="copy">Copy</string>
    <string name="date">Date</string>
    <string name="default_select">0 Selected</string>
    <string name="day_mode">Day Mode</string>
    <string name="del_message">Are you sure you want to delete \"%s.pdf\" ?</string>
    <string name="del_sel_message">Are you sure want to delete the selected items?</string>
    <string name="delete">Delete</string>
    <string name="delete_successfully">Deleted successfully!</string>
    <string name="done">Done</string>
    <string name="duplicate">Duplicate</string>
    <string name="duplicate_successfully">Duplicate successfully!</string>
    <string name="duplicate_unsuccessful">\"Duplicate unsuccessful, the device storage area may not be writeable! \"</string>
    <string name="enter_file_name">Enter here..</string>
    <string name="enter_page_no">Enter page number</string>
    <string name="enter_password">Enter Password to Open</string>
    <string name="exit">Exit</string>
    <string name="exit_message">" Application is going to be exit! "</string>
    <string name="expand_button_title">Advanced</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_title">Tell us the problem you encountered</string>
    <string name="feedback_option1">File can\'t be opened</string>
    <string name="feedback_option2">Suggestions</string>
    <string name="feedback_option3">Slow</string>
    <string name="feedback_option4">Crashes &amp; Bugs</string>
    <string name="feedback_placeholder">Please tell us more details so that we can locate and solve your problem faster</string>
    <string name="choose_option">Please select a feedback option</string>
    <string name="feedback_warning">Please enter at least 6 characters</string>
    <string name="feedback_option6">Too many notifications</string>
    <string name="feedback_content">Enter your FeedBack</string>
    <string name="file_already_exists">The file named %s.pdf already exists, please choose another name!</string>
    <string name="files_selected">%d Selected</string>
    <string name="please_choose_file">Please select at least one file!</string>
    <string name="get_pro_now">GET PRO NOW</string>
    <string name="go_to_page">Go to page</string>
    <string name="more">More</string>
    <string name="more_description">By clicking on this button you can select all items at once, then perform operation on multiple files.</string>
    <string name="more_open_pdf_description">You can enjoy some more tools like add in favourite list directly.</string>
    <string name="more_open_pdf_title">More Tools</string>
    <string name="more_title">Select All</string>
    <string name="name">Name</string>
    <string name="nav_app_bar_navigate_up_description">Navigate up</string>
    <string name="nav_app_bar_open_drawer_description">Open navigation drawer</string>
    <string name="next">Next</string>
    <string name="night_mode">Night Mode (Beta)</string>
    <string name="no">No</string>
    <string name="no_fav">Add a file in favourite category to easily find it here later.</string>
    <string name="no_pdf_file">Could not find any PDF file in your mobile device.</string>
    <string name="no_recent">Any PDF files you have read recently will appear here.</string>
    <string name="not_set">Not set</string>
    <string name="page_by_page">Page by Page</string>
    <string name="permission_deny_positive_text">allow</string>
    <string name="permission_deny_text">To see all files, allow storage access to PDF reader app.</string>
    <string name="permission_deny_title">Allow Permission</string>
    <string name="preference_copied">\"%1$s\" copied to clipboard.</string>
    <string name="print">Print</string>
    <string name="print_description">By using this feature you can print your document directly from here.</string>
    <string name="print_title">"Print Document "</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="pro_description">By purchasing you can remove all ads permanently.</string>
    <string name="pro_title">Remove Ads</string>
    <string name="purchased_success">Purchased Successfully</string>
    <string name="rate_us">Rate us</string>
    <string name="search_doc">Search document</string>
    <string name="add_widget">Add widget</string>
    <string name="push_notifications">Push notifications</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="about_us">About us</string>
    <string name="rate_us_message">"Do you want to rate this application?Your support will help us to improve it."</string>
    <string name="rating_message">Your good rating is very valuable for us.</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="remove_fav_message">Are you sure want to remove selected files from favourite, but they would not be permanently deleted?</string>
    <string name="remove_files">Remove Files</string>
    <string name="remove_from_fav">Remove from Favourite</string>
    <string name="remove_recent">Remove From Recent</string>
    <string name="remove_sel_recent_message">Selected files will be removed from your Recent list, but they would not be permanently deleted.</string>
    <string name="rename">Rename</string>
    <string name="rename_unsuccessful">Rename unsuccessful, the file may not be writeable! \"</string>
    <string name="save">Save</string>
    <string name="delete_content">Are you sure you want to permanently delete?</string>
    <string name="delete_all">Are you sure you want to delete all selected file?</string>
    <string name="title_access">All File Access</string>
    <string name="pdf_reader">PDF Reader</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="content_access">Please accept permission to access files on your device.</string>
    <string name="button_permission">Go Setting</string>
    <string name="search_menu_title">Search</string>
    <string name="selected">" Selected"</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="share">Share</string>
    <string name="share_app">Share this App</string>
    <string name="share_description">Share document with others.</string>
    <string name="share_title">Share Document</string>
    <string name="size">Size</string>
    <string name="sort">Sort</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="summary_collapsed_preference_list">%1$s, %2$s</string>
    <string name="title_fav">Bookmarks</string>
    <string name="title_recent">Recent</string>
    <string name="detail">Detail</string>
    <string name="recent_desc" />
    <string name="bookmarks_desc" />
    <string name="pdf_desc" />
    <string name="word_desc" />
    <string name="excel_desc" />
    <string name="ppt_desc" />
    <string name="search">Search files here</string>
    <string name="clear_text">Clear the text</string>
    <string name="search_icon">search</string>
</resources>