<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/midGraphicContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@android:color/transparent">
    <LinearLayout
        android:background="@drawable/dialog_background_round_white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingVertical="@dimen/_12sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_130sdp">
    <!-- First row: Recent / Bookmarks -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/_8sdp"
        android:gravity="center">

        <!-- Recent -->
        <LinearLayout
            android:id="@+id/ivRecent"
            android:paddingVertical="@dimen/_8sdp"
            android:background="@drawable/dialog_background_round_element"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/_7sdp"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/ic_clock_gradient"
                android:contentDescription="@string/recent_desc" />

            <TextView
                android:id="@+id/tvRecent"
                android:fontFamily="sans-serif"
                android:textFontWeight="500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_recent"
                android:textSize="8sp"
                android:gravity="center"
                android:layout_marginTop="@dimen/_4sdp" />
        </LinearLayout>

        <!-- Bookmarks -->
        <LinearLayout
            android:id="@+id/ivBookmarks"
            android:paddingVertical="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/dialog_background_round_element"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/ic_bookmark_gradient"
                android:contentDescription="@string/bookmarks_desc" />
            <TextView
                android:id="@+id/tvBookmarks"
                android:fontFamily="sans-serif"
                android:textFontWeight="500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_fav"
                android:textSize="8sp"
                android:gravity="center"
                android:layout_marginTop="@dimen/_4sdp"  />
        </LinearLayout>
    </LinearLayout>

    <!-- Second row: PDF / Word / Excel / PPT -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <!-- PDF -->
        <LinearLayout
            android:id="@+id/ivPdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_32sdp"
                android:src="@drawable/icon_pdf"
                android:contentDescription="@string/pdf_desc" />

            <TextView
                android:id="@+id/tvPdf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pdf"
                android:fontFamily="sans-serif"
                android:textFontWeight="500"
                android:textColor="@color/text1"
                android:textSize="8sp"
                android:gravity="center"
                android:layout_marginTop="@dimen/_4sdp"  />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <!-- Word -->
        <LinearLayout
            android:id="@+id/ivWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_32sdp"
                android:src="@drawable/icon_word"
                android:contentDescription="@string/word_desc" />

            <TextView
                android:id="@+id/tvWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word"
                android:fontFamily="sans-serif"
                android:textFontWeight="500"
                android:textAllCaps="false"
                android:textColor="@color/text1"
                android:textSize="8sp"
                android:gravity="center"
                android:layout_marginTop="@dimen/_4sdp"  />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <!-- Excel -->

        <LinearLayout
            android:id="@+id/ivPpt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_32sdp"
                android:src="@drawable/icon_ppt"
                android:contentDescription="@string/ppt_desc" />

            <TextView
                android:id="@+id/tvPpt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ppt"
                android:fontFamily="sans-serif"
                android:textFontWeight="500"
                android:textColor="@color/text1"
                android:textSize="8sp"
                android:gravity="center"
                android:layout_marginTop="@dimen/_4sdp"  />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <!-- PPT -->
        <LinearLayout
            android:id="@+id/ivExcel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_32sdp"
                android:src="@drawable/icon_excel"
                android:contentDescription="@string/excel_desc" />

            <TextView
                android:id="@+id/tvExcel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/excel"
                android:fontFamily="sans-serif"
                android:textFontWeight="500"
                android:textColor="@color/text1"
                android:textSize="8sp"
                android:gravity="center"
                android:layout_marginTop="@dimen/_4sdp"  />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>
