<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="@dimen/_12sdp"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_minus8sdp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/file_icon"
            android:layout_width="53dp"
            android:layout_height="49dp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:padding="@dimen/_2sdp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_pdf" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:ellipsize="middle"
            android:singleLine="true"
            android:textColor="@color/text_title_color"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toTopOf="@id/tv_create_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/file_icon"
            app:layout_constraintTop_toTopOf="@id/file_icon"
            tools:ignore="EllipsizeMaxLines"
            tools:text="Title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_create_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="@id/file_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:text="Create on" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/line_color" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/func_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/item_view">

        <com.pdf.pdfreader.pdfviewer.editor.view.ItemFunctionView
            android:id="@+id/func_continuous_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fvIcon="@drawable/ic_continuous_page"
            app:fvTitle="@string/cont_pages" />

        <com.pdf.pdfreader.pdfviewer.editor.view.ItemFunctionView
            android:id="@+id/func_page_by_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fvIcon="@drawable/ic_page_by_page"
            app:fvTitle="@string/page_by_page" />
        <include
            android:id="@+id/night_move_view"
            layout="@layout/item_func_night_mode"/>
        <com.pdf.pdfreader.pdfviewer.editor.view.ItemFunctionView
            android:id="@+id/func_go_to_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fvIcon="@drawable/ic_go_to_page"
            app:fvTitle="@string/go_to_page" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/func_commons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/func_details">
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/line_color" />

        <com.pdf.pdfreader.pdfviewer.editor.view.ItemFunctionView
            android:id="@+id/func_add_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fvIcon="@drawable/ic_add_favorite"
            app:fvTitle="@string/add_in_fav" />

        <com.pdf.pdfreader.pdfviewer.editor.view.ItemFunctionView
            android:id="@+id/func_rename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fvIcon="@drawable/ic_rename"
            app:fvTitle="@string/rename" />

        <com.pdf.pdfreader.pdfviewer.editor.view.ItemFunctionView
            android:id="@+id/func_print"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fvIcon="@drawable/ic_print"
            app:fvTitle="@string/print" />

        <com.pdf.pdfreader.pdfviewer.editor.view.ItemFunctionView
            android:id="@+id/func_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fvIcon="@drawable/ic_delete"
            app:fvTitle="@string/delete" />

        <com.pdf.pdfreader.pdfviewer.editor.view.ItemFunctionView
            android:id="@+id/func_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fvIcon="@drawable/ic_info"
            app:fvTitle="@string/detail" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>