<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:paddingVertical="@dimen/_12sdp"
    android:paddingEnd="@dimen/_16sdp"
    android:paddingStart="@dimen/_10sdp">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:src="@drawable/icon_setting_back_black"
        android:contentDescription="@string/search_icon" />

    <!-- EditText with clear icon -->
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="@dimen/_40sdp">

        <EditText
            android:id="@+id/edt_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_border_blue"
            android:hint="@string/search"
            android:textColorHint="@color/cancel"
            android:textColor="@color/text1"
            android:textSize="14sp"
            android:singleLine="true"
            android:fontFamily="sans-serif"
            android:textFontWeight="400"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_40sdp"/>

        <ImageView
            android:id="@+id/iv_clear"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/find"
            android:contentDescription="@string/clear_text"/>
    </RelativeLayout>

</LinearLayout>
